overflow fix

--- a/docs/index.scss
+++ b/docs/index.scss
@@ -69,6 +69,7 @@ code {
   border-style: 1px dashed $color-secondary-1-3;
   font-style: 'Roboto Mono';
   color: $color-background;
+  overflow: auto;
 }
 
 p {
